# BridgeClient

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  pyproject.toml  tasks.py
.github/workflows/: ci.yml
bridge/: __main__.py  mainwindow.py  ui_mainwindow.py
bridge/ui/: mainwindow.ui  ui_mainwindow.py
bridge/view/: mainwindow.py
